--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@types/react": "^16.0.18",
+    "moment": "^2.19.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   }
