--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@types/react": "^16.0.18",
     "moment": "^2.19.1",
+    "normalize-css": "^2.3.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
   }
