--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.19.1",
     "normalize-css": "^2.3.1",
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "uuid": "^3.1.0"
   }
 }
